@@ -110,16 +110,16 @@ public class ReferralRequestMapper extends AbstractMapper<ReferralRequest> {
             ehrComposition.getConfidentialityCode()
         );
 
-        referralRequest.setId(id);
-        referralRequest.setMeta(meta);
+        referralRequest.setId(id)
+                       .setMeta(meta);
         referralRequest.getIdentifier().add(identifier);
-        referralRequest.setStatus(ReferralRequestStatus.UNKNOWN);
-        referralRequest.setIntent(ReferralCategory.ORDER);
-        referralRequest.getRequester().setAgent(agent);
-        referralRequest.setAuthoredOnElement(authoredOn);
-        referralRequest.setNote(getNotes(requestStatement));
-        referralRequest.setSubject(new Reference(patient));
-        referralRequest.setPriority(referralPriority);
+        referralRequest.setStatus(ReferralRequestStatus.UNKNOWN)
+                        .setIntent(ReferralCategory.ORDER)
+                        .setAuthoredOnElement(authoredOn)
+                        .setNote(getNotes(requestStatement))
+                        .setSubject(new Reference(patient))
+                        .setPriority(referralPriority)
+                        .getRequester().setAgent(agent);
 
         return referralRequest;
     }
@@ -141,7 +141,7 @@ public class ReferralRequestMapper extends AbstractMapper<ReferralRequest> {
     }
 
     private boolean isMatchingAgent(RCMRMT030101UKPart part, String requestAgentRoot) {
-        return part.getAgent().getId().get(0).getRoot().equals(requestAgentRoot)
+        return part.getAgent().getId().getFirst().getRoot().equals(requestAgentRoot)
                && part.getAgent().getAgentPerson() == null;
     }
 
