@@ -72,7 +72,7 @@ public class SpecimenBatteryMapper {
         final var ehrComposition = batteryParameters.getEhrComposition();
 
         final Observation observation = new Observation();
-        final String id = batteryParameters.getBatteryCompoundStatement().getId().get(0).getRoot();
+        final String id = batteryParameters.getBatteryCompoundStatement().getId().getFirst().getRoot();
         observation.setId(id);
         observation.setMeta(generateMeta(META_PROFILE_URL_SUFFIX));
         observation.addIdentifier(buildIdentifier(id, batteryParameters.getPractiseCode()));
@@ -208,7 +208,7 @@ public class SpecimenBatteryMapper {
     }
 
     private Reference createSpecimenReference(RCMRMT030101UKCompoundStatement specimenCompoundStatement) {
-        return new Reference(new IdType(Specimen.name(), specimenCompoundStatement.getId().get(0).getRoot()));
+        return new Reference(new IdType(Specimen.name(), specimenCompoundStatement.getId().getFirst().getRoot()));
     }
 
     private Optional<InstantType> getIssued(
