@@ -56,21 +56,21 @@ public class AgentDirectoryMapperTest {
 
         assertEquals(THREE_RESOURCES_MAPPED, mappedAgents.size());
 
-        var practitioner = (Practitioner) mappedAgents.get(0);
+        var practitioner = (Practitioner) mappedAgents.getFirst();
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6", practitioner.getId());
-        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().get(0).getValue());
+        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().getFirst().getValue());
         assertEquals(NameUse.OFFICIAL, practitioner.getNameFirstRep().getUse());
         assertEquals("Test", practitioner.getNameFirstRep().getFamily());
 
         var organization = (Organization) mappedAgents.get(1);
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6-ORG", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("TEMPLE SOWERBY MEDICAL PRACTICE", organization.getName());
         assertThat(organization.getType()).isEmpty();
 
         var practitionerRole = (PractitionerRole) mappedAgents.get(2);
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6-PR", practitionerRole.getId());
-        assertEquals(PRACT_ROLE_META_PROFILE, practitionerRole.getMeta().getProfile().get(0).getValue());
+        assertEquals(PRACT_ROLE_META_PROFILE, practitionerRole.getMeta().getProfile().getFirst().getValue());
         assertEquals("Practitioner/94F00D99-0601-4A8E-AD1D-1B564307B0A6", practitionerRole.getPractitioner().getReference());
         assertEquals("Organization/94F00D99-0601-4A8E-AD1D-1B564307B0A6-ORG", practitionerRole.getOrganization().getReference());
         assertThat(practitionerRole.getCode()).isEmpty();
@@ -81,12 +81,12 @@ public class AgentDirectoryMapperTest {
         var agentDirectory = unmarshallAgentDirectoryElement("agent_org_with_general_practitioner_number.xml");
 
         var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
-        var practitioner = (Practitioner) mappedAgents.get(0);
+        var practitioner = (Practitioner) mappedAgents.getFirst();
 
         assertEquals("E7E7B550-09EF-BE85-C20F-34598014166C", practitioner.getId());
         assertThat(practitioner.getIdentifier()).isNotEmpty();
-        assertEquals("https://fhir.hl7.org.uk/Id/gmp-number", practitioner.getIdentifier().get(0).getSystem());
-        assertEquals("12345", practitioner.getIdentifier().get(0).getValue());
+        assertEquals("https://fhir.hl7.org.uk/Id/gmp-number", practitioner.getIdentifier().getFirst().getSystem());
+        assertEquals("12345", practitioner.getIdentifier().getFirst().getValue());
     }
 
     @Test
@@ -97,21 +97,21 @@ public class AgentDirectoryMapperTest {
 
         assertEquals(THREE_RESOURCES_MAPPED, mappedAgents.size());
 
-        var practitioner = (Practitioner) mappedAgents.get(0);
+        var practitioner = (Practitioner) mappedAgents.getFirst();
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6", practitioner.getId());
-        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().get(0).getValue());
+        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().getFirst().getValue());
         assertEquals(NameUse.OFFICIAL, practitioner.getNameFirstRep().getUse());
         assertEquals("Test", practitioner.getNameFirstRep().getFamily());
 
         var organization = (Organization) mappedAgents.get(1);
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6-ORG", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("TEMPLE SOWERBY MEDICAL PRACTICE", organization.getName());
         assertThat(organization.getType()).isEmpty();
 
         var practitionerRole = (PractitionerRole) mappedAgents.get(2);
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6-PR", practitionerRole.getId());
-        assertEquals(PRACT_ROLE_META_PROFILE, practitionerRole.getMeta().getProfile().get(0).getValue());
+        assertEquals(PRACT_ROLE_META_PROFILE, practitionerRole.getMeta().getProfile().getFirst().getValue());
         assertEquals("Practitioner/94F00D99-0601-4A8E-AD1D-1B564307B0A6", practitionerRole.getPractitioner().getReference());
         assertEquals("Organization/94F00D99-0601-4A8E-AD1D-1B564307B0A6-ORG", practitionerRole.getOrganization().getReference());
         assertEquals("Clerical Worker", practitionerRole.getCodeFirstRep().getText());
@@ -125,24 +125,24 @@ public class AgentDirectoryMapperTest {
 
         assertEquals(THREE_RESOURCES_MAPPED, mappedAgents.size());
 
-        var practitioner = (Practitioner) mappedAgents.get(0);
+        var practitioner = (Practitioner) mappedAgents.getFirst();
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6", practitioner.getId());
-        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().get(0).getValue());
+        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().getFirst().getValue());
         assertEquals(NameUse.OFFICIAL, practitioner.getNameFirstRep().getUse());
         assertEquals("Test", practitioner.getNameFirstRep().getFamily());
 
         var organization = (Organization) mappedAgents.get(1);
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6-ORG", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("TEMPLE SOWERBY MEDICAL PRACTICE", organization.getName());
         assertThat(organization.getType()).isEmpty();
 
         var practitionerRole = (PractitionerRole) mappedAgents.get(2);
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6-PR", practitionerRole.getId());
-        assertEquals(PRACT_ROLE_META_PROFILE, practitionerRole.getMeta().getProfile().get(0).getValue());
+        assertEquals(PRACT_ROLE_META_PROFILE, practitionerRole.getMeta().getProfile().getFirst().getValue());
         assertEquals("Practitioner/94F00D99-0601-4A8E-AD1D-1B564307B0A6", practitionerRole.getPractitioner().getReference());
         assertEquals("Organization/94F00D99-0601-4A8E-AD1D-1B564307B0A6-ORG", practitionerRole.getOrganization().getReference());
-        assertEquals("General practice", practitionerRole.getCode().get(0).getCoding().get(0).getDisplay());
+        assertEquals("General practice", practitionerRole.getCode().getFirst().getCoding().getFirst().getDisplay());
     }
 
     @Test
@@ -153,9 +153,9 @@ public class AgentDirectoryMapperTest {
 
         assertThat(mappedAgents).hasSize(1);
 
-        var practitioner = (Practitioner) mappedAgents.get(0);
+        var practitioner = (Practitioner) mappedAgents.getFirst();
         assertEquals("95D00D99-0601-4A8E-AD1D-1B564307B0A6", practitioner.getId());
-        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().get(0).getValue());
+        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().getFirst().getValue());
         assertEquals(NameUse.OFFICIAL, practitioner.getNameFirstRep().getUse());
         assertEquals("Test", practitioner.getNameFirstRep().getFamily());
         assertThat(practitioner.getNameFirstRep().getGiven()).isEmpty();
@@ -170,10 +170,10 @@ public class AgentDirectoryMapperTest {
 
         assertThat(mappedAgents).hasSize(1);
 
-        var practitioner = (Practitioner) mappedAgents.get(0);
+        var practitioner = (Practitioner) mappedAgents.getFirst();
 
         assertThat(practitioner.getId()).isEqualTo("95D00D99-0601-4A8E-AD1D-1B564307B0A6");
-        assertThat(practitioner.getMeta().getProfile().get(0).getValue()).isEqualTo(PRACT_META_PROFILE);
+        assertThat(practitioner.getMeta().getProfile().getFirst().getValue()).isEqualTo(PRACT_META_PROFILE);
         assertThat(practitioner.getNameFirstRep().getUse()).isEqualTo(NameUse.OFFICIAL);
         assertThat(practitioner.getNameFirstRep().getFamily()).isEqualTo("Unknown");
         assertThat(practitioner.getNameFirstRep().getGiven()).isEmpty();
@@ -188,13 +188,13 @@ public class AgentDirectoryMapperTest {
 
         assertThat(mappedAgents).hasSize(1);
 
-        var practitioner = (Practitioner) mappedAgents.get(0);
+        var practitioner = (Practitioner) mappedAgents.getFirst();
         assertThat(practitioner.getId()).isEqualTo("95D00D99-0601-4A8E-AD1D-1B564307B0A6");
-        assertThat(practitioner.getMeta().getProfile().get(0).getValue()).isEqualTo(PRACT_META_PROFILE);
+        assertThat(practitioner.getMeta().getProfile().getFirst().getValue()).isEqualTo(PRACT_META_PROFILE);
         assertThat(practitioner.getNameFirstRep().getUse()).isEqualTo(NameUse.OFFICIAL);
         assertThat(practitioner.getNameFirstRep().getFamily()).isEqualTo("Test");
-        assertThat(practitioner.getNameFirstRep().getGiven().get(0).getValue()).isEqualTo("NHS");
-        assertThat(practitioner.getNameFirstRep().getPrefix().get(0).getValue()).isEqualTo("Mr");
+        assertThat(practitioner.getNameFirstRep().getGiven().getFirst().getValue()).isEqualTo("NHS");
+        assertThat(practitioner.getNameFirstRep().getPrefix().getFirst().getValue()).isEqualTo("Mr");
     }
 
     @Test
@@ -205,9 +205,9 @@ public class AgentDirectoryMapperTest {
 
         assertThat(mappedAgents).hasSize(1);
 
-        var organization = (Organization) mappedAgents.get(0);
+        var organization = (Organization) mappedAgents.getFirst();
         assertThat(organization.getId()).isEqualTo("1D9BDC28-50AB-440D-B421-0E5E049526FA");
-        assertThat(organization.getMeta().getProfile().get(0).getValue()).isEqualTo(ORG_META_PROFILE);
+        assertThat(organization.getMeta().getProfile().getFirst().getValue()).isEqualTo(ORG_META_PROFILE);
         assertThat(organization.getName()).isEqualTo("The Health Centre");
         assertThat(organization.getIdentifier()).isEmpty();
         assertThat(organization.getTelecom()).isEmpty();
@@ -222,9 +222,9 @@ public class AgentDirectoryMapperTest {
 
         assertThat(mappedAgents).hasSize(1);
 
-        var organization = (Organization) mappedAgents.get(0);
+        var organization = (Organization) mappedAgents.getFirst();
         assertThat(organization.getId()).isEqualTo("1D9BDC28-50AB-440D-B421-0E5E049526FA");
-        assertThat(organization.getMeta().getProfile().get(0).getValue()).isEqualTo(ORG_META_PROFILE);
+        assertThat(organization.getMeta().getProfile().getFirst().getValue()).isEqualTo(ORG_META_PROFILE);
         assertThat(organization.getName()).isEqualTo("Unknown");
         assertThat(organization.getIdentifier()).isEmpty();
         assertThat(organization.getTelecom()).isEmpty();
@@ -239,9 +239,9 @@ public class AgentDirectoryMapperTest {
 
         assertEquals(1, mappedAgents.size());
 
-        var organization = (Organization) mappedAgents.get(0);
+        var organization = (Organization) mappedAgents.getFirst();
         assertEquals("1D9BDC28-50AB-440D-B421-0E5E049526FA", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("The Health Centre", organization.getName());
         assertEquals(ORG_IDENTIFIER_SYSTEM, organization.getIdentifierFirstRep().getSystem());
         assertEquals("A81001", organization.getIdentifierFirstRep().getValue());
@@ -257,9 +257,9 @@ public class AgentDirectoryMapperTest {
 
         assertEquals(1, mappedAgents.size());
 
-        var organization = (Organization) mappedAgents.get(0);
+        var organization = (Organization) mappedAgents.getFirst();
         assertEquals("1D9BDC28-50AB-440D-B421-0E5E049526FA", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("The Health Centre", organization.getName());
         assertThat(organization.getIdentifier()).isEmpty();
         assertThat(organization.getTelecom()).isEmpty();
@@ -274,9 +274,9 @@ public class AgentDirectoryMapperTest {
 
         assertEquals(1, mappedAgents.size());
 
-        var organization = (Organization) mappedAgents.get(0);
+        var organization = (Organization) mappedAgents.getFirst();
         assertEquals("1D9BDC28-50AB-440D-B421-0E5E049526FA", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("The Health Centre", organization.getName());
         assertThat(organization.getIdentifier()).isEmpty();
         assertTelecom(organization.getTelecomFirstRep(), "01234567890");
@@ -291,9 +291,9 @@ public class AgentDirectoryMapperTest {
 
         assertEquals(1, mappedAgents.size());
 
-        var organization = (Organization) mappedAgents.get(0);
+        var organization = (Organization) mappedAgents.getFirst();
         assertEquals("1D9BDC28-50AB-440D-B421-0E5E049526FA", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("The Health Centre", organization.getName());
         assertThat(organization.getIdentifier()).isEmpty();
         assertTelecom(organization.getTelecomFirstRep(), "01234567890");
@@ -308,9 +308,9 @@ public class AgentDirectoryMapperTest {
 
         assertEquals(1, mappedAgents.size());
 
-        var organization = (Organization) mappedAgents.get(0);
+        var organization = (Organization) mappedAgents.getFirst();
         assertEquals("1D9BDC28-50AB-440D-B421-0E5E049526FA", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("The Health Centre", organization.getName());
         assertThat(organization.getIdentifier()).isEmpty();
         assertThat(organization.getTelecom()).isEmpty();
@@ -344,12 +344,12 @@ public class AgentDirectoryMapperTest {
         var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         var practitionerRole = (PractitionerRole) mappedAgents.get(2);
-        var coding = practitionerRole.getCode().get(0).getCoding().get(0);
+        var coding = practitionerRole.getCode().getFirst().getCoding().getFirst();
 
         assertAll(
-                () -> assertEquals("1234", coding.getCode()),
-                () -> assertEquals("http://snomed.info/sct", coding.getSystem()),
-                () -> assertEquals("General practice", coding.getDisplay())
+            () -> assertEquals("1234", coding.getCode()),
+            () -> assertEquals("http://snomed.info/sct", coding.getSystem()),
+            () -> assertEquals("General practice", coding.getDisplay())
         );
     }
 
@@ -383,12 +383,12 @@ public class AgentDirectoryMapperTest {
 
         var agents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
         var practitionerRole = (PractitionerRole) agents.get(2);
-        var coding = practitionerRole.getCode().get(0).getCoding().get(0);
+        var coding = practitionerRole.getCode().getFirst().getCoding().getFirst();
 
         assertAll(
-                () -> assertEquals("1234", coding.getCode()),
-                () -> assertEquals("http://read.info/readv2", coding.getSystem()),
-                () -> assertEquals("General practice", coding.getDisplay())
+            () -> assertEquals("1234", coding.getCode()),
+            () -> assertEquals("http://read.info/readv2", coding.getSystem()),
+            () -> assertEquals("General practice", coding.getDisplay())
         );
     }
 
@@ -419,19 +419,19 @@ public class AgentDirectoryMapperTest {
         var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         var practitionerRole = (PractitionerRole) mappedAgents.get(2);
-        var coding = practitionerRole.getCode().get(0).getCoding().get(0);
+        var coding = practitionerRole.getCode().getFirst().getCoding().getFirst();
 
         assertAll(
-                () -> assertEquals("1234", coding.getCode()),
-                () -> assertEquals("urn:oid:1.2.3.4.5.6", coding.getSystem()),
-                () -> assertEquals("Other person", coding.getDisplay())
+            () -> assertEquals("1234", coding.getCode()),
+            () -> assertEquals("urn:oid:1.2.3.4.5.6", coding.getSystem()),
+            () -> assertEquals("Other person", coding.getDisplay())
         );
     }
 
     private void assertAddress(Address address) {
         assertEquals(AddressUse.WORK, address.getUse());
         assertEquals(AddressType.PHYSICAL, address.getType());
-        assertEquals("234 ASHTREE ROAD", address.getLine().get(0).getValue());
+        assertEquals("234 ASHTREE ROAD", address.getLine().getFirst().getValue());
         assertEquals("LEEDS", address.getLine().get(1).getValue());
         assertEquals("YORKSHIRE", address.getLine().get(2).getValue());
         assertEquals("LS12 3RT", address.getPostalCode());
