@@ -120,27 +120,28 @@ public class BloodPressureMapperTest {
     public void mapBloodPressureObservationWithValidData() {
         var ehrExtract = unmarshallEhrExtractElement("full_valid_data_bp_example.xml");
 
-        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertFixedValues(bloodPressure);
         assertThat(bloodPressure.getId()).isEqualTo(EXAMPLE_ID);
-        assertThat(bloodPressure.getComponent().get(0).getCode().getCodingFirstRep())
+        assertThat(bloodPressure.getComponent().getFirst().getCode().getCodingFirstRep())
             .isEqualTo(DegradedCodeableConcepts.DEGRADED_OTHER);
-        assertThat(bloodPressure.getComponent().get(0).getCode().getCoding().get(1).getDisplay())
+        assertThat(bloodPressure.getComponent().getFirst().getCode().getCoding().get(1).getDisplay())
             .isEqualTo(CODING_DISPLAY_MOCK);
         assertThat(bloodPressure.hasSubject()).isTrue();
         assertThat(bloodPressure.getIssuedElement().asStringValue()).isEqualTo(ISSUED_EXAMPLE);
         assertThat(bloodPressure.getEffective().toString()).isEqualTo(DateFormatUtil.parseToDateTimeType(EFFECTIVE_EXAMPLE).toString());
-        assertThat(bloodPressure.getPerformer().get(0).getReference()).isEqualTo(PPRF_PARTICIPANT_ID);
+        assertThat(bloodPressure.getPerformer().getFirst().getReference()).isEqualTo(PPRF_PARTICIPANT_ID);
         assertThat(bloodPressure.getComment()).isEqualTo(COMMENT_EXAMPLE_1);
 
-        assertThat(bloodPressure.getComponent().get(0).getCode().getCodingFirstRep())
+        assertThat(bloodPressure.getComponent().getFirst().getCode().getCodingFirstRep())
             .isEqualTo(DegradedCodeableConcepts.DEGRADED_OTHER);
-        assertThat(bloodPressure.getComponent().get(0).getCode().getCoding().get(1).getDisplay())
+        assertThat(bloodPressure.getComponent().getFirst().getCode().getCoding().get(1).getDisplay())
             .isEqualTo(CODING_DISPLAY_MOCK);
-        assertThat(bloodPressure.getComponent().get(0).getValueQuantity().getValue()).isEqualTo(COMPONENT_1_VALUE_QUANTITY_VALUE);
-        assertThat(bloodPressure.getComponent().get(0).getInterpretation().getText()).isEqualTo(COMPONENT_1_INTERPRETATION_TEXT);
-        assertThat(bloodPressure.getComponent().get(0).getReferenceRange().get(0).getText()).isEqualTo(COMPONENT_1_REFERENCE_RANGE_TEXT);
+        assertThat(bloodPressure.getComponent().getFirst().getValueQuantity().getValue()).isEqualTo(COMPONENT_1_VALUE_QUANTITY_VALUE);
+        assertThat(bloodPressure.getComponent().getFirst().getInterpretation().getText()).isEqualTo(COMPONENT_1_INTERPRETATION_TEXT);
+        assertThat(bloodPressure.getComponent().getFirst().getReferenceRange().getFirst().getText())
+            .isEqualTo(COMPONENT_1_REFERENCE_RANGE_TEXT);
 
         assertThat(bloodPressure.getComponent().get(1).getCode().getCodingFirstRep())
             .isEqualTo(DegradedCodeableConcepts.DEGRADED_OTHER);
@@ -148,14 +149,15 @@ public class BloodPressureMapperTest {
             .isEqualTo(CODING_DISPLAY_MOCK);
         assertThat(bloodPressure.getComponent().get(1).getValueQuantity().getValue()).isEqualTo(COMPONENT_2_VALUE_QUANTITY_VALUE);
         assertThat(bloodPressure.getComponent().get(1).getInterpretation().getText()).isEqualTo(COMPONENT_2_INTERPRETATION_TEXT);
-        assertThat(bloodPressure.getComponent().get(1).getReferenceRange().get(0).getText()).isEqualTo(COMPONENT_2_REFERENCE_RANGE_TEXT);
+        assertThat(bloodPressure.getComponent().get(1).getReferenceRange().getFirst().getText())
+            .isEqualTo(COMPONENT_2_REFERENCE_RANGE_TEXT);
     }
 
     @Test
     public void mapBloodPressureWithNoOptionalData() {
         var ehrExtract = unmarshallEhrExtractElement("no_optional_data_bp_example.xml");
 
-        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertFixedValues(bloodPressure);
         assertThat(bloodPressure.getId()).isEqualTo(EXAMPLE_ID);
@@ -163,18 +165,18 @@ public class BloodPressureMapperTest {
         assertThat(bloodPressure.getCode().getCoding().get(1).getDisplay()).isEqualTo(CODING_DISPLAY_MOCK);
         assertThat(bloodPressure.hasSubject()).isTrue();
         assertThat(bloodPressure.getIssuedElement().asStringValue()).isEqualTo(ISSUED_EXAMPLE);
-        assertThat(bloodPressure.getPerformer().get(0).getReference()).isEqualTo(PPRF_PARTICIPANT_ID);
+        assertThat(bloodPressure.getPerformer().getFirst().getReference()).isEqualTo(PPRF_PARTICIPANT_ID);
 
         assertThat(bloodPressure.getEffective()).isNull();
         assertThat(StringUtils.isEmpty(bloodPressure.getComment())).isTrue();
 
-        assertThat(bloodPressure.getComponent().get(0).getCode().getCodingFirstRep())
+        assertThat(bloodPressure.getComponent().getFirst().getCode().getCodingFirstRep())
             .isEqualTo(DegradedCodeableConcepts.DEGRADED_OTHER);
-        assertThat(bloodPressure.getComponent().get(0).getCode().getCoding().get(1).getDisplay())
+        assertThat(bloodPressure.getComponent().getFirst().getCode().getCoding().get(1).getDisplay())
             .isEqualTo(CODING_DISPLAY_MOCK);
-        assertThat(bloodPressure.getComponent().get(0).getValueQuantity()).isNull();
-        assertThat(bloodPressure.getComponent().get(0).getInterpretation().getCoding()).isEmpty();
-        assertThat(bloodPressure.getComponent().get(0).getReferenceRange()).isEmpty();
+        assertThat(bloodPressure.getComponent().getFirst().getValueQuantity()).isNull();
+        assertThat(bloodPressure.getComponent().getFirst().getInterpretation().getCoding()).isEmpty();
+        assertThat(bloodPressure.getComponent().getFirst().getReferenceRange()).isEmpty();
 
         assertThat(bloodPressure.getComponent().get(1).getCode().getCodingFirstRep())
             .isEqualTo(DegradedCodeableConcepts.DEGRADED_OTHER);
@@ -209,7 +211,7 @@ public class BloodPressureMapperTest {
 
         final var bloodPressure = bloodPressureMapper
             .mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE)
-            .get(0);
+            .getFirst();
 
         assertAll(
             () -> assertThat(confidentialityCodesCaptor.getAllValues())
@@ -244,7 +246,7 @@ public class BloodPressureMapperTest {
     public void mapBloodPressureObservationWithCompositionIdMatchingEncounter() {
         var ehrExtract = unmarshallEhrExtractElement("ehr_composition_id_matching_encounter_bp_example.xml");
 
-        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(bloodPressure.hasContext()).isTrue();
     }
@@ -253,7 +255,7 @@ public class BloodPressureMapperTest {
     public void mapBloodPressureObservationWithSystolicOnlyComment() {
         var ehrExtract = unmarshallEhrExtractElement("systolic_comment_only_bp_example.xml");
 
-        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(bloodPressure.getComment()).isEqualTo(COMMENT_EXAMPLE_2);
     }
@@ -262,7 +264,7 @@ public class BloodPressureMapperTest {
     public void mapBloodPressureObservationWithDiastolicOnlyComment() {
         var ehrExtract = unmarshallEhrExtractElement("diastolic_comment_only_blood_pressure_example.xml");
 
-        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(bloodPressure.getComment()).isEqualTo(COMMENT_EXAMPLE_3);
     }
@@ -271,7 +273,7 @@ public class BloodPressureMapperTest {
     public void mapBloodPressureObservationWithNarrativeStatementOnlyComment() {
         var ehrExtract = unmarshallEhrExtractElement("narrative_statement_comment_only_bp_example.xml");
 
-        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(bloodPressure.getComment()).isEqualTo(COMMENT_EXAMPLE_4);
     }
@@ -281,7 +283,7 @@ public class BloodPressureMapperTest {
         var ehrExtract = unmarshallEhrExtractElement(
             "effective_date_time_using_effective_time_center_bp_example.xml");
 
-        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(bloodPressure.getEffective()).isInstanceOf(DateTimeType.class);
         assertThat(bloodPressure.getEffectiveDateTimeType().getValueAsString()).isEqualTo("2006-04-25");
@@ -292,7 +294,7 @@ public class BloodPressureMapperTest {
         var ehrExtract = unmarshallEhrExtractElement(
             "effective_period_start_end_using_effective_time_bp_example.xml");
 
-        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(bloodPressure.getEffective()).isInstanceOf(Period.class);
         assertThat(bloodPressure.getEffectivePeriod().getStartElement().getValueAsString()).isEqualTo("2006-04-25");
@@ -312,15 +314,15 @@ public class BloodPressureMapperTest {
     public void mapBloodPressureWithNoSnomedCodeInCoding() {
         var ehrExtract = unmarshallEhrExtractElement("full_valid_data_bp_example.xml");
 
-        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(bloodPressure.getCode().getCodingFirstRep())
             .isEqualTo(DegradedCodeableConcepts.DEGRADED_OTHER);
         assertThat(bloodPressure.getCode().getCoding().get(1).getDisplay())
             .isEqualTo(CODING_DISPLAY_MOCK);
-        assertThat(bloodPressure.getComponent().get(0).getCode().getCodingFirstRep())
+        assertThat(bloodPressure.getComponent().getFirst().getCode().getCodingFirstRep())
             .isEqualTo(DegradedCodeableConcepts.DEGRADED_OTHER);
-        assertThat(bloodPressure.getComponent().get(0).getCode().getCoding().get(1).getDisplay())
+        assertThat(bloodPressure.getComponent().getFirst().getCode().getCoding().get(1).getDisplay())
             .isEqualTo(CODING_DISPLAY_MOCK);
         assertThat(bloodPressure.getComponent().get(1).getCode().getCodingFirstRep())
             .isEqualTo(DegradedCodeableConcepts.DEGRADED_OTHER);
@@ -335,19 +337,19 @@ public class BloodPressureMapperTest {
 
         var ehrExtract = unmarshallEhrExtractElement("full_valid_data_bp_example.xml");
 
-        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var bloodPressure = bloodPressureMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertAll(
             () -> assertEquals(codeableConcept, bloodPressure.getCode()),
-            () -> assertEquals(codeableConcept, bloodPressure.getComponent().get(0).getCode()),
+            () -> assertEquals(codeableConcept, bloodPressure.getComponent().getFirst().getCode()),
             () -> assertEquals(codeableConcept, bloodPressure.getComponent().get(1).getCode())
         );
     }
 
     private void assertFixedValues(Observation bloodPressure) {
-        assertThat(bloodPressure.getMeta().getProfile().get(0).getValue()).isEqualTo(META_PROFILE);
-        assertThat(bloodPressure.getIdentifier().get(0).getSystem()).isEqualTo(IDENTIFIER_SYSTEM);
-        assertThat(bloodPressure.getIdentifier().get(0).getValue()).isEqualTo(EXAMPLE_ID);
+        assertThat(bloodPressure.getMeta().getProfile().getFirst().getValue()).isEqualTo(META_PROFILE);
+        assertThat(bloodPressure.getIdentifier().getFirst().getSystem()).isEqualTo(IDENTIFIER_SYSTEM);
+        assertThat(bloodPressure.getIdentifier().getFirst().getValue()).isEqualTo(EXAMPLE_ID);
         assertThat(bloodPressure.getStatus()).isEqualTo(Observation.ObservationStatus.FINAL);
     }
 
